# Linia

./: LICENSE  README.md
doc/: График работ.txt
doc/Hardware/: монитор.txt
doc/ТЗ/: Измеритель  ИППП-3  РЭ  (ч.2_05.11. 2015).doc
files/: Linia.loc
sources/: CMakeLists.txt  Linia.uvmpw
sources/Device/: CMakeLists.txt  Device.sct  Device.uvoptx  Device.uvprojx
sources/Device/src/: defines.h  main_d.cpp  no-warnings.h  structs.h
sources/Device/src/Connector/Device/: Interface_d.cpp  Interface_d.h  Messages_d.cpp  Transceiver_d.cpp  Value_d.cpp
sources/Device/src/Generator/: FPGA.cpp  FPGA.h  Generator.cpp  Generator.h  MAX532.cpp  MAX532.h  MCP4811.cpp  MCP4811.h  SwitchingBoard.cpp  SwitchingBoard.h
sources/Device/src/Hardware/: Timer.cpp  Timer.h
sources/Device/src/Hardware/CMSIS/: startup_stm32f407xx.s  system_stm32f4xx.c
sources/Device/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_IT.cpp  HAL_PINS.cpp  HAL_PINS.h  HAL_SPI1_d.cpp  HAL_TIM.cpp  HAL_TIM2.cpp  HAL_TIM3.cpp  stm32f4xx_hal_conf.h
sources/Device/src/Utils/: Log.cpp  Log.h
sources/VS/: CMakeLists.txt
sources/VS/Linia2/: CMakeLists.txt
sources/VS/Linia2/resources/: resource.h  resources.rc
sources/VS/Linia2/src/: Application.cpp  Application.h  Device.cpp  Device.h  MainWindow.cpp  MainWindow.h  defines.cpp  defines.h  defines.inc  description.txt  opt.h
sources/VS/Linia2/src/Communicator/: Comm.cpp  Comm.h
sources/VS/Linia2/src/Communicator/ComPort/: ComPort.cpp  ComPort.h  rs232.c  rs232.h
sources/VS/Linia2/src/Communicator/SPI/: SPI.cpp  SPI.h
sources/VS/Linia2/src/Controls/: Buttons.cpp  Buttons.h  ControlFunctions.cpp  ControlFunctions.h  Painter.cpp  Painter.h  TextControls.cpp  TextControls.h
sources/VS/Linia2/src/Panels/: Panel.cpp  Panel.h  Panel01_Name.cpp  Panel01_Name.h  Panel02_ModeUpper.cpp  Panel02_ModeUpper.h  Panel03_Config.cpp  Panel03_Config.h  Panel04_Model.cpp  Panel04_Model.h  Panel06_Percents.cpp  Panel06_Percents.h  Panel07_Indicator.cpp  Panel07_Indicator.h  Panel08_ModeLower.cpp  Panel08_ModeLower.h  Panel09_Table.cpp  Panel09_Table.h  Panel10_Scale.cpp  Panel10_Scale.h
sources/VS/Linia2/src/Panels/Panel05_Graph/: GraphEntity.cpp  GraphEntity.h  Grid.cpp  Grid.h  Panel05_Graph.cpp  Panel05_Graph.h
sources/VS/Linia2/src/Panels/Panel11_Menu/: DialogArchive.cpp  DialogArchive.h  DialogFile.cpp  DialogFile.h  DialogGraph.cpp  DialogGraph.h  DialogReport.cpp  DialogReport.h  DialogSetup.cpp  DialogSetup.h  DialogTable.cpp  DialogTable.h  DialogTest.cpp  DialogTest.h  MenuDialog.cpp  MenuDialog.h  Panel11_Menu.cpp  Panel11_Menu.h
sources/VS/Linia2/src/Panels/Panel12_Debug/: NotebookChips.cpp  NotebookChips.h  PageAD5697.cpp  PageAD5697.h  PageAD9952.cpp  PageAD9952.h  PageChip.cpp  PageChip.h  PageMCP4811.cpp  PageMCP4811.h  PainterRegister.cpp  PainterRegister.h  Panel12_Debug.cpp  Panel12_Debug.h  PanelRegister.cpp  PanelRegister.h
sources/VS/Linia2/src/Settings/: Color.h  Settings.cpp  Settings.h  Value.h
sources/VS/Linia2/src/Utils/: Buffer.h  Configurator.cpp  Configurator.h  GlobalFunctions.cpp  GlobalFunctions.h  Localizator.cpp  Localizator.h  Log.cpp  Log.h  String.cpp  String.h  StringUtils.cpp  StringUtils.h  SystemDepend.cpp  SystemDepend.h  Timer.cpp  Timer.h
sources/VS/Linia2/src/Windows/: ConsoleRS232.cpp  ConsoleRS232.h
sources/common/Connector/Device/: Messages_.cpp  Messages_.h  Transceiver_.h  Value_.h
sources/common/Display/: Colors_.cpp  Colors_.h  Console_.cpp  Console_.h  Display_.cpp  Display_.h  Display_stm_.cpp  Primitives_.cpp  Primitives_.h  Symbols_.cpp  Symbols_.h  Text_.cpp  Text_.h
sources/common/Display/Font/: Font.cpp  Font.h  FontBig.cpp  FontBig.h  FontMid.cpp  FontMid.h
sources/common/FlashDrive/: FileManager.cpp  FileManager.h  FlashDrive.cpp  FlashDrive.h  ffconf.h
sources/common/FlashDrive/USBH/: usbh_conf.cpp  usbh_diskio.cpp  usbh_diskio.h
sources/common/Hardware/HAL/: HAL_RTC_.cpp  HAL_SPI1_p_.cpp
sources/common/Hardware/Keyboard/: Keyboard_.cpp  Keyboard_.h
sources/common/Utils/: Buffer_.cpp  Buffer_.h  Debug_.cpp  Debug_.h  List_.cpp  List_.h  Log_.cpp  Log_.h  Math_.cpp  Math_.h  Queue_.cpp  Queue_.h  Stack_.cpp  Stack_.h  StringUtils_.cpp  StringUtils_.h  String_.cpp  String_.h
sources/common/VCP/: VCP.cpp  VCP.h
sources/common/VCP/USBD/: usbd_cdc_interface.cpp  usbd_conf.cpp  usbd_conf.h  usbd_desc.cpp
sources/common/_VS_KEIL/CMSIS/: cmsis_armcc.h
sources/common/_VS_KEIL/FatFS/: diskio.h  ff.cpp  ff.h  ff_gen_drv.cpp  ff_gen_drv.h
sources/common/_VS_KEIL/HAL/: stm32f4xx_hal.cpp  stm32f4xx_hal_cortex.cpp  stm32f4xx_hal_hcd.cpp
sources/common/_VS_KEIL/USBH/: _usbh_core.h  _usbh_def.h  _usbh_msc.h  usbh_cdc.cpp  usbh_cdc.h  usbh_core.cpp  usbh_diskio.cpp  usbh_diskio.h  usbh_msc.cpp
sources/common/_VS_KEIL/std_includes/: cctype  cmath  cstdarg  cstddef  cstdlib  cstring  ctime  integer.h  limits  stdint.h
sources/common/libs/LwIP/: lwipopts.h
sources/common/libs/STM32Cube_F4/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_def.h  stm32f4xx_hal_dma.h  stm32f4xx_hal_pcd.h  stm32f4xx_hal_tim.h
sources/common/libs/STM32Cube_F4/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_cortex.c  stm32f4xx_hal_dma.c  stm32f4xx_hal_flash.c  stm32f4xx_hal_flash_ex.c  stm32f4xx_hal_gpio.c  stm32f4xx_hal_hcd.c  stm32f4xx_hal_pcd.c  stm32f4xx_hal_pcd_ex.c  stm32f4xx_hal_rcc.c  stm32f4xx_hal_spi.c  stm32f4xx_hal_tim.c  stm32f4xx_hal_tim_ex.c  stm32f4xx_ll_usb.c
sources/common/libs/miniz/: miniz.c  miniz.h  miniz_export.h  miniz_tdef.c  miniz_tinfl.c  miniz_zip.c
sources/scripts/: assembly.bat  bench.py  build.bat  promt.bat
sources/scripts/cb_lin/: build.sh  full_build.sh  install_soft.sh
sources/scripts/keil/: edit.bat
sources/scripts/orange_pi/: README.md  diagnose_gui.sh  fix_build_arm64.sh  fix_packages_arm64.sh  full_build_arm64.sh  install_soft_arm64.sh  make_executable.bat  make_executable.sh  run_with_display.sh
sources/scripts/vs_keil/: assembly.bat  edit.bat
sources/scripts/vs_win/: build.bat  edit.bat  make.bat  rebuild.bat  run.bat
(+1 files in other folders)
